--- a/src/Dockerfile.linux
+++ b/src/Dockerfile.linux
@@ -1,7 +1,7 @@
 ARG BASE_DIR=/durabletask
 ARG NAME=durable_task_monitor
 
-FROM golang:1.21.9-bullseye AS builder
+FROM golang:1.24.7-bookworm AS builder
 ARG BASE_DIR
 ARG NAME
 COPY cmd $BASE_DIR/cmd
