--- a/src/Dockerfile.windows
+++ b/src/Dockerfile.windows
@@ -1,7 +1,7 @@
 ARG BASE_DIR=/durabletask
 ARG NAME=durable_task_monitor
 
-FROM golang:1.21.9-nanoserver AS builder
+FROM golang:1.24.3-nanoserver-1809 AS builder
 ARG BASE_DIR
 ARG NAME
 COPY cmd $BASE_DIR/cmd
